crates/ah-tui/tests/snapshots/scenario_render__initial_screen.snap
---
source: crates/ah-tui/tests/scenario_render.rs
expression: snapshot_screen().unwrap()
---
[m[H[J[48;2;17;17;27m                                                                                
  ╔═══════════════════════════════════════════════════════════════════════════  
  ║                                                                             
  ║                           █████╗  ██████╗ ███████╗███╗   ██╗████████╗       
  ║                          ██╔══██╗██╔════╝ ██╔════╝████╗  ██║╚══██╔══╝       
  ║                          ███████║██║  ███╗█████╗  ██╔██╗ ██║   ██║          
  ║                          ██╔══██║██║   ██║██╔══╝  ██║╚██╗██║   ██║          
  ║                          ██║  ██║╚██████╔╝███████╗██║ ╚████║   ██║          
                                                                                
  [38;2;49;50;68m╭┤[38;2;205;214;244;1m Refactor database schema for better performance [38;2;49;50;68;22m├───────────────────────╮[39m  
  [38;2;49;50;68m│[39m [38;2;250;179;135m● [38;2;205;214;244mRefactor database schema for better performance[39m                        [38;2;49;50;68m│[39m  
  [38;2;49;50;68m│[39m [38;2;137;180;250mRunning tests [45/67 tests passed][39m                                       [38;2;49;50;68m│[39m  
  [38;2;49;50;68m╰──────────────────────────────────────────────────────────────────────────╯[39m  
  [38;2;49;50;68m╭┤[38;2;205;214;244;1m Add error handling for network timeouts [38;2;49;50;68;22m├───────────────────────────────╮[39m  
  [38;2;49;50;68m│[39m [38;2;166;218;149m✓ [38;2;205;214;244mAdd error handling for network timeouts[39m                                [38;2;49;50;68m│[39m  
  [38;2;49;50;68m│[39m [38;2;127;132;156mReady for review • [TIME_AGO][39m                                                [38;2;49;50;68m│[39m  
  [38;2;49;50;68m╰──────────────────────────────────────────────────────────────────────────╯[39m  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  [38;2;250;179;135m↑↓[39m Navigate • [38;2;243;139;168mCtrl+C x2[39m Quit                                                  [m
