crates/ah-tui/tests/snapshots/scenario_render__initial_screen_linux.snap
---
source: crates/ah-tui/tests/scenario_render.rs
expression: normalized_screen
---
[m[H[J[48;2;17;17;27m                                                                                
  ╔════
