crates/ah-tui/tests/snapshots/scenario_render__initial_screen_macos.snap
---
source: crates/ah-tui/tests/scenario_render.rs
expression: normalized_screen
---
[m[H[J[TIMESTAMP] [33m WARN[m ah_core::local_branches_enumerator: Invalid repository ID: [CURSOR_POS]
