crates/ah-tui/tests/snapshots/scenario_render__interaction_description_macos.snap
---
source: crates/ah-tui/tests/scenario_render.rs
expression: description_screen
---
[m[H[J[48;2;17;17;27m                                                                                
  [38;2;17;17;27m▀▀▀▀▀[38;2;26;46;63;48;2;31;61;82m▀[38;2;66;169;216;48;2;77;189;240m▀[38;2;73;167;213;48;2;85;187;237m▀[38;2;27;42;58;48;2;33;55;73m▀[38;2;17;17;27;48;2;17;17;27m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
