crates/ah-tui/tests/snapshots/scenario_render__interaction_initial.snap
---
source: crates/ah-tui/tests/scenario_render.rs
assertion_line: 141
expression: initial_screen
---
[m[H[J
