crates/ah-tui/tests/snapshots/scenario_render__interaction_initial_linux.snap
---
source: crates/ah-tui/tests/scenario_render.rs
expression: initial_screen
---
[m[H[J[TIMESTAMP] [33m WARN[m
