crates/ah-tui/tests/snapshots/scenario_render__interaction_navigation.snap
---
source: crates/ah-tui/tests/scenario_render.rs
assertion_line: 157
expression: navigation_screen
---
[m[H[J[48;2;17;17;27m                                                                                
  ╔════
