crates/ah-tui/tests/snapshots/scenario_render__interaction_navigation_macos.snap
---
source: crates/ah-tui/tests/scenario_render.rs
expression: navigation_screen
---
[m[H[J[48;2;17;17;27m
